--- a/index.html
+++ b/index.html
@@ -68,12 +68,40 @@
     
 	<div id="news">
 		<h2>
-			News !!
+			Port d'ame citoyen
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			“Le climat anti-arme que nous subissons est autant le fruit d’une méconnaissance du sujet que d’une volonté idéologique d'infantiliser le citoyen pour le rendre dépendant de l’état y compris pour sa sécurité.”
+Eric Blondiau
+
+En france le port d’arme est un sujet tabou. Où se mêle incompréhension, idioties, méconnaissance du sujet et légendes urbaines, aujourd’hui je vais approfondir le sujets en vous montrant des exemples
+
+Le port d’arme a souvent été vu comme ce qui se fait de pire dans les pires coins des usa par les pires délinquants, c’est un des rapports d’armes non gérer et plus gérable ou tout le monde s’entretue au moindre regard de travers. Tous les réfractaires au port d’arme qui n’ont pas d’autre arguments, le ressortent sans cesse. Souvent ces personnes ne font pas la différence entre film Hollywoodien, journal télévisé et la réalité.
+
+En france après les attentats, un système de port d’arme à été demandé par l’association ARPAC et l'institut mirabeau.
+L’idée n’a rien à voir avec ce que pense à peu prêt tout le monde, c’est à dire rentrer dans une armurerie acheter n’importe quoi et se balader tranquillement avec. L’idée c’est prendre des volontaires et de les trier. Par exemple : Pas d'antécédents psychiatrique, casier judiciaire vide, français majeur responsable, porter son arme discrètement, passer différents test de morale ainsi qu’une formation théorique et pratique sur le maniement la législation et l’usage d’une arme de catégorie B (c’est à dire la même formation que celle de la police)
+
+Aujourd’hui le problème ne vient pas des armes légale mais des armes illégale qui viennent de nos chère pays voisins. L’idée du port d’arme citoyen est d’avoir régulièrement et quotidiennement des personnes avec la même formation au maintien de l’ordre avec arme à feu comme la police ou la gendarmerie. Avec en plus un entraînement plus régulier puisqu’ils s'entraînent dans leur stand de tir. Les forces de l’ordre tirent entre 50 et 90 cartouches par an, ce qui est très peu, alors qu’un civil allant à son stand de tir c’est facile 50 cartouche par semaine.
+Cela permettra d’intervenir rapidement et efficacement dans beaucoup de situation. Et surtout on ne peut pas identifier les civils possédant une arme. Par exemple si quelqu’un veut violer une femme, il va attendre qu’il n’y ai pas de force de l’ordre mais si cette personne ce dit que même si il n’y a pas de policier, on peut lui en empêcher en lui collant un glock sur la tempe, ça va dissuader beaucoup de personnes.
+
+Le port d’arme a existé en france, il a été interdit en 1939 pour empêcher une insurrection et protéger le gouvernement, pas pour sauver la veuve et l’orphelin.
+
+Les opposant au port d’arme vont souvent ressortir l’argument des États-unis, cependant lorsque l’on regarde les états où la législation des armes est très stricte, comme l’Illinois et la ville de Chicago ont peu voir que la criminalité et les meurtres sont très élevé. Alors pourquoi tout le monde donne l'exemple des USA pour se donner raison ? C’est plutôt simple,les français commettent un amalgame assez bête c’est à dire : tous les états ont la même culture, mêmes lois, même mentalités.
+
+Par exemple :
+- En Europe il y a un système de port d’arme : La Slovaquie
+- Un habitant sur deux est armée : La Suisse
+- Le taux de criminalité est très élevé : L’Angleterre
+
+Donc le port d’arme et les armes légales commettent des crimes. Ce raisonnement est absurde et c’est justement à cause de cela que l’on pense que les US est un pays où les armes règne et le sang coule.
+
+Mais en jouant avec les mots, les chiffres et le fait que personnes n’ira vérifier si c’est vrai les médias peuvent facilement vous manipuler. Alors que c’est le contraire, les pays ayant un fort taux d'armement ont souvent les taux de criminalité les plus bas.
+
+Pour information les USA, le taux de crime juvenile violent sans arme à feu est le double de celui des 25 autres pays les plus développés. Pour le taux d’homicide sans arme à feu, il est 3,5 fois supérieur. Les US n’ont pas un problème d’arme à feu mais de culture de la violence. Cependant si on regarde les chiffres, les USA, pays le plus armé au monde et de très loin, le meurtre par balle n’arrive qu’à la 21e place des causes de décès en 2016 et en mettant agresseurs et victime dans la même catégorie
+
+Maintenant un port d’arme en France est totalement impensable, aux vues des mentalités et des informations détournée dans les média.
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Le plus beau : <a href="#">Alexis Douay</a>
 		</h3>
 	</div>
     
